[ironic] increases resources for conductor

--- a/openstack/ironic/values.yaml
+++ b/openstack/ironic/values.yaml
@@ -48,10 +48,10 @@ pod:
         cpu: 100m
     conductor:
       limits:	
-        memory: 512Mi	
+        memory: 1Gi	
         cpu: 1000m	
       requests:	
-        memory: 256Mi	
+        memory: 512Mi	
         cpu: 500m
     pxe:
       limits:
