--- a/openstack/ironic/values.yaml
+++ b/openstack/ironic/values.yaml
@@ -34,11 +34,11 @@ pod:
   resources:
     api:
       limits:	
-        memory: 512Mi	
-        cpu: 500m	
+        memory: 1Gi	
+        cpu: 1000m	
       requests:	
-        memory: 256Mi	
-        cpu: 100m
+        memory: 512Mi	
+        cpu: 500m
     inspector:
       limits:	
         memory: 512Mi	
