Adding CPU OIDs for F5

--- a/openstack/maia/files/snmp-exporter/f5-generator.yaml
+++ b/openstack/maia/files/snmp-exporter/f5-generator.yaml
@@ -63,3 +63,9 @@ modules:
       - sysGlobalHostSwapTotalKb
       - sysGlobalHostSwapUsed
       - sysGlobalHostSwapUsedKb
+      - sysGlobalHostCpuUsageRatio5s 
+      - sysGlobalHostCpuUsageRatio1m
+      - sysMultiHostCpuUsageRatio5s
+      - sysMultiHostCpuUsageRatio1m
+      - sysTmmStatTmUsageRatio5s
+      - sysTmmStatTmUsageRatio1m
