--- a/openstack/infra-exporters/apic-exporters/templates/apic_exporters_deployment.yaml
+++ b/openstack/infra-exporters/apic-exporters/templates/apic_exporters_deployment.yaml
@@ -45,6 +45,6 @@ spec:
               name: apic-exporters-etc
           ports:
             - name: metrics
-              containerPort: {{ .Values.apic_exporters.prometheus_port | quote}}
+              containerPort: {{ .Values.apic_exporters.prometheus_port }}
 {{- end }}
 {{- end }}
