alertmanager routing web hooks adoptions
template adoption: made the webhooks required

--- a/global/prometheus-alertmanager/templates/config.yaml
+++ b/global/prometheus-alertmanager/templates/config.yaml
@@ -527,7 +527,7 @@ data:
     - name: slack_api_warning
       slack_configs:
         - channel: '#alert-api-{{"{{ .CommonLabels.severity }}"}}'
-          api_url: {{ default "MISSING" .Values.slack.api_warning_webhook_url | quote }}
+          api_url: {{ required "slack.api_warning_webhook_url undefined" .Values.slack.api_warning_webhook_url | quote }}
           username: "Control Plane"
           title: {{"'{{template \"slack.sapcc.title\" . }}'"}}
           title_link: {{"'{{template \"slack.sapcc.titlelink\" . }}'"}}
@@ -558,7 +558,7 @@ data:
     - name: slack_api_critical
       slack_configs:
         - channel: '#alert-api-{{"{{ .CommonLabels.severity }}"}}'
-          api_url: {{ default "MISSING" .Values.slack.api_critical_webhook_url | quote }}
+          api_url: {{ required "slack.api_critical_webhook_url undefined" .Values.slack.api_critical_webhook_url | quote }}
           username: "Control Plane"
           title: {{"'{{template \"slack.sapcc.title\" . }}'"}}
           title_link: {{"'{{template \"slack.sapcc.titlelink\" . }}'"}}
@@ -619,7 +619,7 @@ data:
     - name: slack_by_os_service
       slack_configs:
         - channel: '#cc-os-{{"{{ .CommonLabels.service }}"}}'
-          api_url: {{ default "MISSING" .Values.slack.webhook_url | quote }}
+          api_url: {{ required "slack.webhook_url undefined" .Values.slack.webhook_url | quote }}
           username: "Control Plane"
           title: {{"'{{template \"slack.sapcc.title\" . }}'"}}
           title_link: {{"'{{template \"slack.sapcc.titlelink\" . }}'"}}
@@ -716,7 +716,7 @@ data:
     # ----  PagerDuty Setup ---- Hint: service_key causes using api v1, check internet ----
     - name: pagerduty_api
       pagerduty_configs:
-        - service_key: {{ default "MISSING" .Values.pagerduty.api.service_key | quote }}
+        - service_key: {{ required "pagerduty.api.service_key undefined" .Values.pagerduty.api.service_key | quote }}
           description: {{"'{{ template \"pagerduty.sapcc.description\" . }}'"}}
           component: {{"'{{template \"pagerduty.sapcc.tier\" . }}'"}}
           group: {{"'{{template \"pagerduty.sapcc.service\" . }}'"}}
@@ -734,7 +734,7 @@ data:
 
     - name: pagerduty_metal
       pagerduty_configs:
-        - service_key: {{ default "MISSING" .Values.pagerduty.metal.service_key | quote }}
+        - service_key: {{ required "pagerduty.metal.service_key undefined" .Values.pagerduty.metal.service_key | quote }}
           description: {{"'{{ template \"pagerduty.sapcc.description\" . }}'"}}
           component: {{"'{{template \"pagerduty.sapcc.tier\" . }}'"}}
           group: {{"'{{template \"pagerduty.sapcc.service\" . }}'"}}
@@ -752,7 +752,7 @@ data:
 
     - name: pagerduty_network
       pagerduty_configs:
-        - service_key: {{ default "MISSING" .Values.pagerduty.network.service_key | quote }}
+        - service_key: {{ required "pagerduty.network.service_key undefined" .Values.pagerduty.network.service_key | quote }}
           description: {{"'{{ template \"pagerduty.sapcc.description\" . }}'"}}
           component: {{"'{{template \"pagerduty.sapcc.tier\" . }}'"}}
           group: {{"'{{template \"pagerduty.sapcc.service\" . }}'"}}
@@ -770,7 +770,7 @@ data:
 
     - name: pagerduty_vmware
       pagerduty_configs:
-        - service_key: {{ default "MISSING" .Values.pagerduty.vmware.service_key | quote }}
+        - service_key: {{ required "pagerduty.vmware.service_key undefined" .Values.pagerduty.vmware.service_key | quote }}
           description: {{"'{{ template \"pagerduty.sapcc.description\" . }}'"}}
           component: {{"'{{template \"pagerduty.sapcc.tier\" . }}'"}}
           group: {{"'{{template \"pagerduty.sapcc.service\" . }}'"}}
@@ -788,7 +788,7 @@ data:
 
     - name: pagerduty_alertchain_test
       pagerduty_configs:
-        - service_key: {{ default "MISSING" .Values.pagerduty.alerttest.service_key | quote }}
+        - service_key: {{ required "pagerduty.alerttest.service_key undefined" .Values.pagerduty.alerttest.service_key | quote }}
           description: {{"'{{ template \"pagerduty.sapcc.description\" . }}'"}}
           component: {{"'{{template \"pagerduty.sapcc.tier\" . }}'"}}
           group: {{"'{{template \"pagerduty.sapcc.service\" . }}'"}}
