--- a/openstack/manila/templates/nanny-deployment.yaml
+++ b/openstack/manila/templates/nanny-deployment.yaml
@@ -64,6 +64,10 @@ spec:
           volumeMounts:
             - mountPath: /manila-etc
               name: manila-etc
+          {{- if .Values.pod.resources.nanny }}
+          resources:
+{{ toYaml .Values.pod.resources.nanny | indent 13 }}
+          {{- end }}
 {{- end }}
 {{- if .Values.nanny.quota_sync.enabled }}
         - name: quota-sync
@@ -90,6 +94,10 @@ spec:
           volumeMounts:
             - mountPath: /manila-etc
               name: manila-etc
+          {{- if .Values.pod.resources.nanny_quota }}
+          resources:
+{{ toYaml .Values.pod.resources.nanny_quota | indent 13 }}
+          {{- end }}
 {{- end }}
 {{- if .Values.nanny.db_cleanup.enabled }}
         - name: db-cleanup
@@ -116,6 +124,10 @@ spec:
           volumeMounts:
             - mountPath: /manila-etc
               name: manila-etc
+          {{- if .Values.pod.resources.nanny }}
+          resources:
+{{ toYaml .Values.pod.resources.nanny | indent 13 }}
+          {{- end }}
 {{- end }}
 {{- end }}
 {{- end }}
