[manila] simplify back end list
just a list of netapp filers

--- a/openstack/manila/values.yaml
+++ b/openstack/manila/values.yaml
@@ -270,22 +270,23 @@ tempest:
 unittest:
   enabled: false
 
-# Dictionary mapping availability-zones to shares
-# shares:
-#   nova1:
-#     shares_netapp:
-#      - name: DEFINED-IN-REGION-CHART
-#        backend_name: custom-name-used-in-type
-#        share_server_cleanup_interval: 10
-#        host: my-netapp-host
-#        username: my-netapp-user
-#        password: my-netapp-pw
-#        root_volume_aggregate: DEFINED-IN-REGION-CHART
-#        aggregate_search_pattern: DEFINED-IN-REGION-CHART
-#        port_search_pattern: DEFINED-IN-REGION-CHART
-#        physical_network: DEFINED-IN-REGION-CHART
-#        mtu: DEFINED-IN-REGION-CHART
-#        reserved_share_percentage: 0
+# netapp filer back ends, required input
+# netapp:
+#   filers:
+#    - name: DEFINED-IN-REGION-CHART
+#      availability_zone: DEFINED-IN-REGION-CHART
+#      backend_name: custom-name-used-in-type
+#      debug: false
+#      share_server_cleanup_interval: 10
+#      host: my-netapp-host
+#      username: my-netapp-user
+#      password: my-netapp-pw
+#      root_volume_aggregate: DEFINED-IN-REGION-CHART
+#      aggregate_search_pattern: DEFINED-IN-REGION-CHART
+#      port_search_pattern: DEFINED-IN-REGION-CHART
+#      physical_network: DEFINED-IN-REGION-CHART
+#      mtu: DEFINED-IN-REGION-CHART
+#      reserved_share_percentage: 0
 
 vice_president: true
 
