--- a/openstack/manila/templates/shares/shares.yaml
+++ b/openstack/manila/templates/shares/shares.yaml
@@ -1,11 +1,11 @@
-{{- if .Values.shares }}
-{{- range $az, $shares := .Values.shares -}}
-{{- range $i, $share := $shares.shares_netapp -}}
-{{ list $ $share $az | include "share_netapp" }}
+{{- if required ".Values.netapp is missing" .Values.netapp }}
+{{- if .Values.netapp.filers }}
+{{- range $i, $share := .Values.netapp.filers -}}
+{{ list $ $share | include "share_netapp" }}
 ---
-{{ list $ $share $az | include "share_netapp_nanny" }}
+{{ list $ $share | include "share_netapp_nanny" }}
 ---
-{{ list $ $share $az | include "share_netapp_configmap" }}
+{{ list $ $share | include "share_netapp_configmap" }}
 ---
 {{- end -}}
 {{- end -}}
