[vcenter-operator] Set log level via env
The vcenter-operator now allows setting the log-level via environment
variable, which is necessary to suppress passwords in the diff in
production.

--- a/openstack/vcenter-operator/templates/deployment.yaml
+++ b/openstack/vcenter-operator/templates/deployment.yaml
@@ -31,3 +31,5 @@ spec:
         env:
         - name: SERVICE_DOMAIN
           value: "cc.{{.Values.global.region}}.{{.Values.global.tld}}"
+        - name: LOG_LEVEL
+          value: {{ .Values.log_level | default "INFO" }}
