--- a/openstack/maia/templates/snmp-exporter-service.yaml
+++ b/openstack/maia/templates/snmp-exporter-service.yaml
@@ -30,3 +30,36 @@ spec:
       port: {{$.Values.snmp_exporter.listen_port}}
 {{ end -}}
 {{ end -}}
+---
+{{- if .Values.snmp_exporter.enabled }}
+{{- range $i, $config := .Values.arista.switches -}}
+{{ if ne $i 0 }}---{{ end }}
+kind: Service
+apiVersion: v1
+metadata:
+  name: snmp-exporter-{{$config.name}}
+  namespace: maia
+  labels:
+    system: openstack
+    service: metrics
+    component: snmp-exporter-{{$config.name}}
+  annotations:
+    maia.io/scrape: "true"
+    maia.io/scrape_param_target: "{{$config.host}}"
+    maia.io/scrape_param_module: "arista"
+    maia.io/port: "{{$.Values.snmp_exporter.listen_port}}"
+    maia.io/path: "/snmp"
+    prometheus.io/scrape: "true"
+    prometheus.io/scrape_param_target: "{{$config.host}}"
+    prometheus.io/scrape_param_module: "arista"
+    prometheus.io/port: "{{$.Values.snmp_exporter.listen_port}}"
+    prometheus.io/path: "/snmp"
+
+spec:
+  selector:
+    component: snmp-exporter-{{$config.name}}
+  ports:
+    - name: metrics
+      port: {{$.Values.snmp_exporter.listen_port}}
+{{ end -}}
+{{ end -}}
