--- a/system/kube-system/templates/ingress-external-public-service.yaml
+++ b/system/kube-system/templates/ingress-external-public-service.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.external_public_service.enabled }}
+{{- if .Values.ingress.external_public_service.enabled }}
 kind: Service
 apiVersion: v1
 
@@ -16,5 +16,5 @@ spec:
       port: 443
       targetPort: https
   externalIPs:
-    - {{ required ".Values.external_public_service.ip" .Values.external_public_service.ip }}
+    - {{ required ".Values.ingress.external_public_service.ip" .Values.ingress.external_public_service.ip }}
 {{- end }}
