--- a/openstack/maia/templates/maia-secrets.yaml
+++ b/openstack/maia/templates/maia-secrets.yaml
@@ -8,6 +8,7 @@ metadata:
   name: maia
 
 data:
+  # the TLS cert will be provided by vice-president, we just need empty shells
   tls.crt: {{ default "" .Values.maia.tls_crt | b64enc | quote }} 
   tls.key: {{ default "" .Values.maia.tls_key | b64enc | quote }}
 {{- end }}
