--- a/openstack/maia/values.yaml
+++ b/openstack/maia/values.yaml
@@ -1,14 +1,14 @@
 global:
-  region: DEFINED-IN-REGION-SECRETS
-  domain: DEFINED-IN-REGION-SECRETS
-  imageRegistry: DEFINED-IN-REGION-SECRETS
-
+  # region: DEFINED-IN-REGION-SECRETS
+  # domain: DEFINED-IN-REGION-SECRETS
+  # imageRegistry: DEFINED-IN-REGION-SECRETS
+  # image_namespace: defined in secrets
 maia:
-  endpoint_host_public: DEFINED-IN-REGION-SECRETS
+  debug: "0"
+  # endpoint_host_public: DEFINED-IN-REGION-SECRETS
   endpoint_port_public: 443
   endpoint_protocol_public: https
-  docker_repo: DEFINED-IN-REGION-SECRETS
-  image_version: '20171117185355'
+  image_version: '20190306162012'
   listen_port: 9091
   # how long will label values be listed by the API (keep minimal)
   label_value_ttl: "24h"
@@ -18,16 +18,16 @@ maia:
   default_domain: monsoon3
   service_user:
     name:  maia
-    password: DEFINED-IN-REGION-SECRETS
+    # password: DEFINED-IN-REGION-SECRETS
     user_domain_name:    Default
     project_name:        service
     project_domain_name: Default
 
 openstack:
-  identity_endpoint: DEFINED-IN-REGION-SECRETS
-  userid: DEFINED-IN-REGION-SECRETS
-  password: DEFINED-IN-REGION-SECRETS
-  domain_name: DEFINED-IN-REGION-SECRETS
+  # identity_endpoint: DEFINED-IN-REGION-SECRETS
+  # userid: DEFINED-IN-REGION-SECRETS
+  # password: DEFINED-IN-REGION-SECRETS
+  # domain_name: DEFINED-IN-REGION-SECRETS
 
 prometheus:
   image: prom/prometheus:v1.8.2
@@ -40,7 +40,7 @@ prometheus:
     size: 100Gi
 
 prometheusv2:
-  enabled: False
+  enabled: True
   image:
     repository: prom/prometheus
     tag: v2.5.0
