--- a/openstack/maia/templates/_maia.conf
+++ b/openstack/maia/templates/_maia.conf
@@ -6,15 +6,15 @@ bind_address = "0.0.0.0:{{.Values.maia.listen_port}}"
 # do not list label values from series older than label_value_ttl
 label_value_ttl = "{{ .Values.maia.label_value_ttl }}"
 [keystone]
-auth_url = "{{ .Values.global.os_auth_url }}"
+auth_url = "{{ required "global.os_auth_url variable missing" .Values.global.os_auth_url }}"
 username = "{{ .Values.maia.service_user.name}}"
-password = "{{ .Values.maia.service_user.password }}"
+password = "{{ required "maia.service_user.password variable missing" .Values.maia.service_user.password }}"
 user_domain_name = "{{ .Values.maia.service_user.user_domain_name }}"
 project_name = "{{ .Values.maia.service_user.project_name }}"
 project_domain_name = "{{ .Values.maia.service_user.project_domain_name }}"
 token_cache_time = "{{ .Values.maia.token_cache_time }}"
 policy_file = "/etc/maia/policy.json"
-# any role will do
+# any project role will be sufficient to access maia metrics
 roles = ".*"
 default_user_domain_name = "{{ .Values.maia.default_domain }}"
 {{- end }}
