--- a/openstack/maia/templates/maia-ingress.yaml
+++ b/openstack/maia/templates/maia-ingress.yaml
@@ -13,7 +13,7 @@ metadata:
 spec:
   tls:
      - secretName: maia
-       hosts: [{{.Values.maia.endpoint_host_public}}]
+       hosts: [{{ required "maia.endpoint_host_public variable missing" .Values.maia.endpoint_host_public }}]
   rules:
     - host: {{.Values.maia.endpoint_host_public}}
       http:
