--- a/openstack/maia/templates/prometheus-deployment.yaml
+++ b/openstack/maia/templates/prometheus-deployment.yaml
@@ -25,39 +25,18 @@ spec:
         runAsUser: 0
       terminationGracePeriodSeconds: 600
       containers:
-        - name: prometheus
-          image: "{{ .Values.prometheus.image }}"
-          args:
-            - -config.file=/etc/prometheus/prometheus.yaml
-            - -storage.local.path=/prometheus
-            - -storage.local.target-heap-size={{ .Values.prometheus.target_heap_size }}
-            - -storage.local.retention={{ .Values.prometheus.retention }}
-            - -web.console.libraries=/etc/prometheus/console_libraries
-            - -web.console.templates=/etc/prometheus/consoles
-            - -web.listen-address=0.0.0.0:{{ .Values.prometheus.listen_port }}
-            - -web.external-url=https://prometheus-maia.{{ .Values.global.region }}.{{ .Values.global.domain }}
-            - -log.level={{ default "info" .Values.prometheus.log_level }}
-          ports:
-            - name: http
-              containerPort: {{ .Values.prometheus.listen_port }}
-          volumeMounts:
-            - name: data
-              mountPath: /prometheus
-            - name: config
-              mountPath: /etc/prometheus
-{{- if .Values.prometheusv2.enabled }}
         - name: prometheusv2
           image: "{{ .Values.prometheusv2.image.repository }}:{{ .Values.prometheusv2.image.tag }}"
           args:
             - --config.file=/etc/prometheus/prometheus.yaml
-            - --storage.tsdb.path=/prometheus/v2
-            - --storage.tsdb.retention={{ .Values.prometheusv2.retention }}
+            - --storage.tsdb.path=/prometheus/
+            - --storage.tsdb.retention={{ .Values.prometheus.retention }}
             - --web.console.libraries=/etc/prometheus/console_libraries
             - --web.console.templates=/etc/prometheus/consoles
             - --web.listen-address=0.0.0.0:{{ .Values.prometheusv2.listen_port }}
             - --web.enable-admin-api
             - --web.enable-lifecycle
-            - --log.level={{ default "info" .Values.prometheusv2.log_level }}
+            - --log.level={{ default "info" .Values.prometheus.log_level }}
           ports:
             - name: http
               containerPort: {{ .Values.prometheusv2.listen_port }}
@@ -67,10 +46,42 @@ spec:
             - name: config
               mountPath: /etc/prometheus
         - name: prometheus-configmap-reloader
-          image: "{{ .Values.prometheusv2.configmap_reload.image.repository }}:{{ .Values.prometheusv2.configmap_reload.image.tag }}"
+          image: "{{ .Values.prometheus.configmap_reload.image.repository }}:{{ .Values.prometheus.configmap_reload.image.tag }}"
           args:
             - --volume-dir=/etc/prometheus
             - --webhook-url=http://localhost:{{ .Values.prometheusv2.listen_port }}/-/reload
+          volumeMounts:
+            - name: config
+              mountPath: /etc/prometheus
+              readOnly: true
+{{ if prometheus_next.enabled -}}
+        # this is for the upcoming versions which should be activated one full retention cycle before becoming the target of Maia
+	# it has the following specific variables in section prometheus_next: listen-port, image-tag for the Prometheus version and storage directory for the tsdb since storage formats change often 
+        - name: prometheus_next
+          image: "{{ .Values.prometheus.image.repository }}:{{ .Values.prometheus_next.image.tag }}"
+          args:
+            - --config.file=/etc/prometheus/prometheus.yaml
+            - --storage.tsdb.path=/prometheus/{{ .Values.prometheus_next.storage_dir }}
+            - --storage.tsdb.retention={{ .Values.prometheus.retention }}
+            - --web.console.libraries=/etc/prometheus/console_libraries
+            - --web.console.templates=/etc/prometheus/consoles
+            - --web.listen-address=0.0.0.0:{{ .Values.prometheus_next.listen_port }}
+            - --web.enable-admin-api
+            - --web.enable-lifecycle
+            - --log.level={{ default "info" .Values.prometheus.log_level }}
+          ports:
+            - name: http
+              containerPort: {{ .Values.prometheus_next.listen_port }}
+          volumeMounts:
+            - name: data
+              mountPath: /prometheus
+            - name: config
+              mountPath: /etc/prometheus
+        - name: prometheus-configmap-reloader
+          image: "{{ .Values.prometheus.configmap_reload.image.repository }}:{{ .Values.prometheus_next.configmap_reload.image.tag }}"
+          args:
+            - --volume-dir=/etc/prometheus
+            - --webhook-url=http://localhost:{{ .Values.prometheus_next.listen_port }}/-/reload
           volumeMounts:
             - name: config
               mountPath: /etc/prometheus
