streamline maia config

--- a/openstack/maia/values.yaml
+++ b/openstack/maia/values.yaml
@@ -1,18 +1,19 @@
 global:
-  region: DEFINED-IN-REGION-SECRETS
-  domain: DEFINED-IN-REGION-SECRETS
-  imageRegistry: DEFINED-IN-REGION-SECRETS
-
+  # region: DEFINED-IN-REGION-SECRETS
+  # domain: DEFINED-IN-REGION-SECRETS
+  # imageRegistry: DEFINED-IN-REGION-SECRETS
+  # image_namespace: defined in secrets
 maia:
   # maia is on in all regions by default
   enabled: True
   # vice_president is used by default to generate certs
   vice_president: true
-  endpoint_host_public: DEFINED-IN-REGION-SECRETS
+  # endpoint_host_public: DEFINED-IN-REGION-SECRETS
   endpoint_port_public: 443
   endpoint_protocol_public: https
   docker_repo: DEFINED-IN-REGION-SECRETS
   image_version: '20190313100650'
+  debug: "0"
   listen_port: 9091
   # how long will label values be listed by the API (keep minimal)
   label_value_ttl: "24h"
@@ -22,7 +23,7 @@ maia:
   default_domain: monsoon3
   service_user:
     name:  maia
-    password: DEFINED-IN-REGION-SECRETS
+    # password: DEFINED-IN-REGION-SECRETS
     user_domain_name:    Default
     project_name:        service
     project_domain_name: Default
@@ -45,30 +46,10 @@ prometheus:
     access_mode: ReadWriteMany
     size: 100Gi
 
-vcenter_exporter:
-  listen_port: 9102
-  interval: 120
-  image_version: DEFINED-IN-REGION-SECRETS
-  enabled: DEFINED-IN-REGION-SECRETS
-  name_shortening_regex: DEFINED-IN-REGION-SECRETS
-  docker_repo: DEFINED-IN-REGION-SECRETS
-# the below is as well DEFINED-IN-REGION-SECRETS
-#  maia_vcenter_config:
-#    - name: vcentername
-#      vcenter_ip: vcenter.host.name
-#      username: vcenteradminuser
-#      password: vcenteradminpassword
-#      availability_zone: az
-
-# using config options from vcenter_exporter     
-esx_node_info:
-  enabled: false # DEFINED-IN-REGION-SECRETS
-  image_version: DEFINED-IN-REGION-SECRETS
-
 snmp_exporter:
   listen_port: 9116
   image_version: "v0.4.0"
-  docker_repo: DEFINED-IN-REGION-SECRETS
+#  docker_repo: DEFINED-IN-REGION-SECRETS
   enabled: False
 # the below is as well DEFINED-IN-REGION-SECRETS
 #  maia_snmp_config:
@@ -77,8 +58,8 @@ snmp_exporter:
 
 jumpserver:
    image:
-      namespace: DEFINED-IN-REGION-SECRETS
+#      namespace: DEFINED-IN-REGION-SECRETS
       name: jumphealth
       tag: 1.1
-   radius_secret: DEFINED-IN-REGION-SECRETS
+#   radius_secret: DEFINED-IN-REGION-SECRETS
    port_number: 9150
