--- a/system/infra-monitoring/requirements.yaml
+++ b/system/infra-monitoring/requirements.yaml
@@ -3,3 +3,7 @@ dependencies:
     repository: file://vendor/cloudprober-exporter
     version: 1.0.0
     condition: cloudprober-exporter.enabled
+  - name: netapp-exporter
+    repository: file://vendor/netapp-exporter
+    version: 0.0.1
+    condition: netapp-exporter.enabled
