--- a/system/kube-system/charts/disco/values.yaml
+++ b/system/kube-system/charts/disco/values.yaml
@@ -1,3 +1,6 @@
+# Enable the DISCO operator.
+enabled: true
+
 image:
   repository: sapcc/disco
   tag: v201810062033
@@ -6,19 +9,23 @@ rbac:
   create: false
   serviceAccountName: default
 
-# port to expose metrics on
+# Port to expose metrics on.
 metricPort: 9091
 
-# TTL for the recordsets
+# TTL for the recordsets.
 recordsetTTL: 1800
 
-# only an ingress' with this annotation will be considered
+# Only an ingress' with this annotation will be considered.
 ingressAnnotation: "disco"
 
-# record which should be used. e.g.: 'ingress.domain.tld.'
+# Record which should be used. e.g.: 'ingress.domain.tld.' .
 record: #DEFINED-IN-SECRETS
 
-# credentials of the service user who creates the recordsets in openstack designate
+# Enable the OpenStack seed for the service user described in the openstack section below.
+seed:
+  enabled: true
+
+# Credentials of the service user who creates the recordsets in OpenStack Designate.
 openstack:
   authURL:            DEFINED-IN-SECRETS
   regionName:         DEFINED-IN-SECRETS
