--- a/openstack/vcenter-operator/templates/deployment.yaml
+++ b/openstack/vcenter-operator/templates/deployment.yaml
@@ -23,7 +23,7 @@ spec:
     spec:
       containers:
       - name: operator
-        image: {{.Values.global.imageRegistry}}/{{.Values.global.image_namespace}}/ubuntu-source-vcenter-operator:{{ .Values.imageVersionVcenterOperator | default .Values.imageVersion | required "Please set imageVersion or similar"}}
+        image: {{required ".Values.global.imageRegistry is missing" .Values.global.imageRegistry}}/{{required ".Values.global.image_namespace is missing" .Values.global.image_namespace}}/ubuntu-source-vcenter-operator:{{ .Values.imageVersionVcenterOperator | default .Values.imageVersion | required "Please set imageVersion or similar"}}
         imagePullPolicy: IfNotPresent
         command:
         - dumb-init
