--- a/openstack/vcenter-operator/values.yaml
+++ b/openstack/vcenter-operator/values.yaml
@@ -4,8 +4,8 @@
 # name: value
 #
 global:
-  image_namespace: REQUIRED
-  imageRegistry: REQUIRED
+  # image_namespace:
+  # imageRegistry:
   user_suffix: ""
 
 pod:
@@ -17,7 +17,7 @@ pod:
         revisionHistory: 5
         podReplacementStrategy: Recreate
 
-imageVersion: null
+# imageVersion:
 
 variables:
   os_username: vcenter_operator
