adds required and defaults

--- a/system/kube-system/charts/disco/templates/clusterrolebinding.yaml
+++ b/system/kube-system/charts/disco/templates/clusterrolebinding.yaml
@@ -11,6 +11,6 @@ roleRef:
   name: {{ template "name" . }}
 subjects:
   - kind: ServiceAccount
-    name: {{ .Values.rbac.serviceAccountName }}
+    name: {{ required ".Values.rbac.serviceAccountName missing" .Values.rbac.serviceAccountName }}
     namespace: kube-system
 {{- end }}
