--- a/system/kube-system/charts/disco/templates/config.yaml
+++ b/system/kube-system/charts/disco/templates/config.yaml
@@ -7,11 +7,11 @@ metadata:
     app: disco
 data:
   disco.conf: |
-    auth_url: {{ .Values.openstack.authURL }}
-    region_name: {{ .Values.openstack.regionName }}
-    username: {{ .Values.openstack.username }}
-    user_domain_name: {{ .Values.openstack.userDomainName }}
-    password: {{ .Values.openstack.password }}
-    project_name: {{ .Values.openstack.projectName }}
-    project_domain_name: {{ .Values.openstack.projectDomainName }}
+    auth_url: {{ required ".Values.openstack.authURL missing" .Values.openstack.authURL }}
+    region_name: {{ required ".Values.openstack.regionName missing" .Values.openstack.regionName }}
+    username: {{ required ".Values.openstack.username missing" .Values.openstack.username }}
+    user_domain_name: {{ required ".Values.openstack.userDomainName missing" .Values.openstack.userDomainName }}
+    password: {{ required ".Values.openstack.password missing" .Values.openstack.password }}
+    project_name: {{ required ".Values.openstack.projectName missing" .Values.openstack.projectName }}
+    project_domain_name: {{ required ".Values.openstack.projectDomainName missing" .Values.openstack.projectDomainName }}
 {{- end }}
