--- a/system/kube-system/charts/disco/values.yaml
+++ b/system/kube-system/charts/disco/values.yaml
@@ -27,12 +27,12 @@ seed:
 
 # Credentials of the service user who creates the recordsets in OpenStack Designate.
 openstack:
-  authURL:            DEFINED-IN-SECRETS
-  regionName:         DEFINED-IN-SECRETS
-  username:           DEFINED-IN-SECRETS
-  userDomainName:     DEFINED-IN-SECRETS
-  password:           DEFINED-IN-SECRETS
-  projectName:        DEFINED-IN-SECRETS
-  projectDomainName:  DEFINED-IN-SECRETS
+  # authURL:            DEFINED-IN-SECRETS
+  # regionName:         DEFINED-IN-SECRETS
+  # username:           DEFINED-IN-SECRETS
+  # userDomainName:     DEFINED-IN-SECRETS
+  # password:           DEFINED-IN-SECRETS
+  # projectName:        DEFINED-IN-SECRETS
+  # projectDomainName:  DEFINED-IN-SECRETS
   # the name of the zone in which the record should be created
-  zoneName:           DEFINED-IN-SECRETS
+  # zoneName:           DEFINED-IN-SECRETS
