[Barbican] Adding api resource values and adding required to db yaml files

--- a/openstack/barbican/values.yaml
+++ b/openstack/barbican/values.yaml
@@ -15,6 +15,13 @@ global:
 pod:
   replicas:
     api: 2
+  resources:
+    requests:
+      memory: 24Mi
+      cpu: 10m
+    limits:
+      memory: 64Mi
+      cpu: 50m
   lifecycle:
     upgrades:
       deployments:
@@ -46,7 +53,7 @@ pg_cluster:
 postgresql:
   imageTag: '9.4.14'
   postgresDatabase: barbican
-  postgresPassword: null
+#  postgresPassword: null
   dbInit: barbican-db-init
   dbMaintain: barbican-db-maintain
   pgbouncer:
@@ -57,8 +64,7 @@ postgresql:
   backup:
     enabled: true
     metrics: true
-    os_password: null
-
+#    os_password: null
   resources:
     requests:
       cpu: "500m" # 1/2 cpu
@@ -130,15 +136,8 @@ pgmetrics:
             description: "Project ID of the secret"
 
 rabbitmq:
-  users:
-    default:
-      password: null
-    admin:
-      password: null
   persistence:
     enabled: false
-  metrics:
-    password: null
 
 logging:
     formatters:
