--- a/openstack/barbican/templates/db-init-configmap.yaml
+++ b/openstack/barbican/templates/db-init-configmap.yaml
@@ -17,6 +17,6 @@ data:
     export PGUSER=postgres
     psql <<- EOSQL
         CREATE DATABASE {{.Values.postgresql.postgresDatabase}};
-        CREATE ROLE {{.Values.global.dbUser}} WITH ENCRYPTED PASSWORD '{{.Values.global.dbPassword}}' LOGIN;
+        CREATE ROLE {{.Values.global.dbUser}} WITH ENCRYPTED PASSWORD '{{required ".Values.global.dbPassword is missing" .Values.global.dbPassword}}' LOGIN;
         GRANT ALL PRIVILEGES ON DATABASE {{.Values.postgresql.postgresDatabase}} TO {{.Values.global.dbUser}};
     EOSQL
