--- a/openstack/barbican/templates/db-maintain-configmap.yaml
+++ b/openstack/barbican/templates/db-maintain-configmap.yaml
@@ -16,6 +16,6 @@ data:
     #!/usr/bin/env bash
     export PGUSER=postgres
     psql <<- EOSQL
-        ALTER ROLE {{ .Values.global.dbUser }} WITH ENCRYPTED PASSWORD '{{ .Values.global.dbPassword }}';
+        ALTER ROLE {{ .Values.global.dbUser }} WITH ENCRYPTED PASSWORD '{{required ".Values.global.dbPassword is missing" .Values.global.dbPassword }}';
         ALTER ROLE {{ .Values.postgresql.postgresUser }} WITH ENCRYPTED PASSWORD '{{ .Values.postgresql.postgresPassword }}';
     EOSQL
