--- a/openstack/maia/values.yaml
+++ b/openstack/maia/values.yaml
@@ -4,6 +4,10 @@ global:
   imageRegistry: DEFINED-IN-REGION-SECRETS
 
 maia:
+  # maia is on in all regions by default
+  enabled: True
+  # vice_president is used by default to generate certs
+  vice_president: true
   endpoint_host_public: DEFINED-IN-REGION-SECRETS
   endpoint_port_public: 443
   endpoint_protocol_public: https
@@ -30,6 +34,7 @@ openstack:
   domain_name: DEFINED-IN-REGION-SECRETS
 
 prometheus:
+  enabled: False
   image: prom/prometheus:v1.8.2
   retention: 168h0m0s
   target_heap_size: "26843545600"
@@ -40,7 +45,8 @@ prometheus:
     size: 100Gi
 
 prometheusv2:
-  enabled: False
+  enabled: True
+  vice_president: true
   image:
     repository: prom/prometheus
     tag: v2.5.0
