--- a/openstack/maia/values.yaml
+++ b/openstack/maia/values.yaml
@@ -30,6 +30,7 @@ openstack:
   domain_name: DEFINED-IN-REGION-SECRETS
 
 prometheus:
+  enabled: False
   image: prom/prometheus:v1.8.2
   retention: 168h0m0s
   target_heap_size: "26843545600"
@@ -40,7 +41,7 @@ prometheus:
     size: 100Gi
 
 prometheusv2:
-  enabled: False
+  enabled: True
   image:
     repository: prom/prometheus
     tag: v2.5.0
