--- a/openstack/neutron/templates/deployment-rpc-server.yaml
+++ b/openstack/neutron/templates/deployment-rpc-server.yaml
@@ -9,7 +9,7 @@ metadata:
     type: rpc
     component: neutron
 spec:
-  replicas: {{ if not .Values.pod.debug.rpc_server }}{{ .Values.pod.wreplicas.rpc_server }}{{ else }} 1 {{ end }}
+  replicas: {{ if not .Values.pod.debug.rpc_server }}{{ .Values.pod.replicas.rpc_server }}{{ else }} 1 {{ end }}
   revisionHistoryLimit: {{ .Values.pod.lifecycle.upgrades.deployments.revision_history }}
   strategy:
     type: {{ .Values.pod.lifecycle.upgrades.deployments.pod_replacement_strategy }}
