Support config of allocation sync

--- a/openstack/neutron/values.yaml
+++ b/openstack/neutron/values.yaml
@@ -62,6 +62,7 @@ router_scheduler_driver: neutron.scheduler.l3_agent_scheduler.LeastRoutersSchedu
 aci:
   apic_application_profile: converged_cloud_openstack
   support_remote_mac_clear: 'True'
+  sync_allocations: 'True'
   # apic_hosts: null
   # apic_user: null
   # apic_password: null
@@ -80,7 +81,11 @@ arista:
   #    user:
   #    password:
 
+bgp_vpn:
+  enabled: true
+
 asr:
+
   config_agents: []
 
 f5:
