disable disco per default

--- a/system/kube-system/charts/disco/values.yaml
+++ b/system/kube-system/charts/disco/values.yaml
@@ -1,5 +1,5 @@
 # Enable the DISCO operator.
-enabled: true
+enabled: false
 
 image:
   repository: sapcc/disco
@@ -23,7 +23,7 @@ record: #DEFINED-IN-SECRETS
 
 # Enable the OpenStack seed for the service user described in the openstack section below.
 seed:
-  enabled: true
+  enabled: false
 
 # Credentials of the service user who creates the recordsets in OpenStack Designate.
 openstack:
