[manila] to be able to consume values in sub charts
they need to go to global

--- a/openstack/manila/templates/shares/shares.yaml
+++ b/openstack/manila/templates/shares/shares.yaml
@@ -1,6 +1,6 @@
-{{- if required ".Values.netapp is missing" .Values.netapp }}
-{{- if .Values.netapp.filers }}
-{{- range $i, $share := .Values.netapp.filers -}}
+{{- if required ".Values.global.netapp is missing" .Values.global.netapp }}
+{{- if .Values.global.netapp.filers }}
+{{- range $i, $share := .Values.global.netapp.filers -}}
 {{ list $ $share | include "share_netapp" }}
 ---
 {{ list $ $share | include "share_netapp_nanny" }}
