Fix fluent-bit configmap

--- a/system/kube-monitoring/templates/fluent-bit-config.yaml
+++ b/system/kube-monitoring/templates/fluent-bit-config.yaml
@@ -1,4 +1,4 @@
-{{ if .Values.fluent-bit.enabled }}
+{{ if index .Values "fluent-bit" "enabled" }}
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -79,7 +79,7 @@ data:
           Retry_Limit False
           Type  flb_type
           Time_Key @timestamp
-          Logstash_Prefix {{ .Values "fluent-bit" "backend" "es" "logstash_prefix" }}
+          Logstash_Prefix {{ index .Values "fluent-bit" "backend" "es" "logstash_prefix" }}
           HTTP_User {{ index .Values "fluent-bit" "backend" "es" "http_user" }}
           HTTP_Passwd {{ index .Values "fluent-bit" "backend" "es" "http_passwd" }}
           tls on
