--- a/system/kube-monitoring/values.yaml
+++ b/system/kube-monitoring/values.yaml
@@ -48,7 +48,8 @@ prometheus-node-exporter:
   extraArgs:
     - --collector.filesystem.ignored-mount-points=\"^/(sys|proc|dev|host|etc)($|/)\"
     - --collector.processes
-    - --collector.systemd.enable-task-metrics
+    # enabled by default. flag didn't make it to prom/node-exporter:v0.17.0 .
+    #- --collector.systemd.enable-task-metrics
 
   extraHostVolumeMounts:
     - name: dbus
