update description for NetworkAsrNatTableIsNearlyFull alert

--- a/openstack/maia/templates/maia-ingress.yaml
+++ b/openstack/maia/templates/maia-ingress.yaml
@@ -24,5 +24,5 @@ spec:
             servicePort: {{.Values.maia.listen_port}}
 # uncomment to expose Prometheus UI instead of Maia
 #            serviceName: prometheus-maia
-#            servicePort: {{.Values.prometheusv2.listen_port}}
+#            servicePort: {{.Values.prometheus.listen_port}}
 {{- end }}
