--- a/openstack/maia/templates/prometheus-service.yaml
+++ b/openstack/maia/templates/prometheus-service.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.prometheusv2.enabled }}
+{{- if .Values.prometheus.enabled }}
 kind: Service
 apiVersion: v1
 metadata:
@@ -10,11 +10,11 @@ metadata:
     component: prometheus
   annotations:
     prometheus.io/scrape: "true"
-    prometheus.io/port: "{{ .Values.prometheusv2.listen_port }}"
+    prometheus.io/port: "{{ .Values.prometheus.listen_port }}"
 spec:
   selector:
     component: prometheus-maia
   ports:
     - name: http
-      port: {{ .Values.prometheusv2.listen_port }}
+      port: {{ .Values.prometheus.listen_port }}
 {{- end }}
