--- a/openstack/maia/values.yaml
+++ b/openstack/maia/values.yaml
@@ -34,17 +34,6 @@ openstack:
   domain_name: DEFINED-IN-REGION-SECRETS
 
 prometheus:
-  enabled: False
-  image: prom/prometheus:v1.8.2
-  retention: 168h0m0s
-  target_heap_size: "26843545600"
-  listen_port: 9092
-  persistence:
-    name: data-prometheus-maia-0
-    access_mode: ReadWriteMany
-    size: 100Gi
-
-prometheusv2:
   enabled: True
   vice_president: true
   image:
@@ -56,11 +45,10 @@ prometheusv2:
     image:
       repository: jimmidyson/configmap-reload
       tag: v0.2.2
-
-  # persistence:
-    # name: data-prometheus-maia-0
-    # access_mode: ReadWriteMany
-    # size: 100Gi
+  persistence:
+    name: data-prometheus-maia-0
+    access_mode: ReadWriteOnce
+    size: 100Gi
 
 vcenter_exporter:
   listen_port: 9102
