--- a/openstack/maia/values.yaml
+++ b/openstack/maia/values.yaml
@@ -47,7 +47,8 @@ prometheus:
       tag: v0.2.2
   persistence:
     name: data-prometheus-maia-0
-    access_mode: ReadWriteOnce
+    # this should be ReadWriteOnce but change is not possible
+    access_mode: ReadWriteMany
     size: 100Gi
 
 vcenter_exporter:
