[Barbican] upgrading postgresql imageTag to 9.6

--- a/openstack/barbican/values.yaml
+++ b/openstack/barbican/values.yaml
@@ -41,7 +41,7 @@ pg_cluster:
     backup_schedule: "* * * * *"
 
 postgresql:
-  imageTag: '9.4.14'
+  imageTag: 9.6
   postgresDatabase: barbican
 #  postgresPassword: null
   dbInit: barbican-db-init
