--- a/system/kube-monitoring/charts/prometheus-collector/templates/deployment.yaml
+++ b/system/kube-monitoring/charts/prometheus-collector/templates/deployment.yaml
@@ -24,7 +24,11 @@ spec:
           args:
             - --config.file=/etc/prometheus/prometheus.yaml
             - --storage.tsdb.path=/prometheus
+            {{- if semverCompare ">=v2.8.0" .Values.global.prometheus.tag }}
+            - --storage.tsdb.retention.time={{.Values.retention}}
+            {{ else }}
             - --storage.tsdb.retention={{.Values.retention}}
+            {{- end }}
             - --web.console.libraries=/etc/prometheus/console_libraries
             - --web.console.templates=/etc/prometheus/consoles
             - --web.external-url=https://{{.Values.ingress.host}}.{{.Values.global.region}}.{{.Values.global.domain}}
