--- a/system/infra-monitoring/requirements.yaml
+++ b/system/infra-monitoring/requirements.yaml
@@ -7,3 +7,7 @@ dependencies:
     repository: file://vendor/netapp-exporter
     version: 0.0.1
     condition: netapp-exporter.enabled
+  - name: apic-exporters
+    repository: file://vendor/apic-exporters
+    versions: 0.1.0
+    condition: apic_exporters.enabled
