Fixed typo in requirements.yaml for infra-monitoring

--- a/system/infra-monitoring/requirements.yaml
+++ b/system/infra-monitoring/requirements.yaml
@@ -9,5 +9,5 @@ dependencies:
     condition: netapp-exporter.enabled
   - name: apic-exporters
     repository: file://vendor/apic-exporters
-    versions: 1.0.0
+    version: 1.0.0
     condition: apic_exporters.enabled
