Renamed apic exporter chart

--- a/system/infra-monitoring/requirements.yaml
+++ b/system/infra-monitoring/requirements.yaml
@@ -8,6 +8,6 @@ dependencies:
     version: 0.0.1
     condition: netapp-exporter.enabled
   - name: apic-exporters
-    repository: file://vendor/apic-exporters
+    repository: file://vendor/apic_exporters
     version: 1.0.0
     condition: apic_exporters.enabled
