fix debug option

--- a/system/kube-system/charts/disco/templates/deployment.yaml
+++ b/system/kube-system/charts/disco/templates/deployment.yaml
@@ -31,7 +31,7 @@ spec:
             - --recheck-period={{ default 5 .Values.recheckPeriod }}
             - --resync-period={{ default 2 .Values.resyncPeriod }}
             - --threadiness={{ default 1 .Values.threadiness }}
-            - --v={{ default 1 .Values.logLevel }}
+            - --debug={{ default false .Values.debug }}
           volumeMounts:
             - name: config
               mountPath: /etc/disco/config/
