--- a/system/kube-system/charts/disco/values.yaml
+++ b/system/kube-system/charts/disco/values.yaml
@@ -9,6 +9,9 @@ rbac:
   create: false
   serviceAccountName: default
 
+# Enable debug logging.
+debug: false
+
 # Port to expose metrics on.
 metricPort: 9091
 
