--- a/openstack/maia/templates/maia-deployment.yaml
+++ b/openstack/maia/templates/maia-deployment.yaml
@@ -32,7 +32,7 @@ spec:
       containers:
         - name: maia
           # remove the "string:" prefix which is used to prevent helm's --set option from reformatting plain numbers into floats in scientific notation
-          image: {{ required "global.imageRegistry variable is missing" .Values.global.imageRegistry }}/{{ required "global.image_namespace variable is missing" .Values.global.image_namespace }}:{{ required "maia.image_version variable missing" .Values.maia.image_version | replace "string:" "" }}
+          image: {{ required "maia.docker_repo variable is missing" .Values.maia.docker_repo }}:{{ required "maia.image_version variable missing" .Values.maia.image_version | replace "string:" "" }}
           imagePullPolicy: IfNotPresent
 #          command: ["sh"]
 #          args:
