--- a/openstack/maia/templates/snmp-exporter-deployment.yaml
+++ b/openstack/maia/templates/snmp-exporter-deployment.yaml
@@ -33,7 +33,7 @@ spec:
             name: snmp-exporter
       containers:
         - name: snmp-exporter
-          image: {{$.Values.snmp_exporter.docker_repo}}:{{ $.Values.snmp_exporter.image_version }}
+          image: {{ required "snmp_exporter.docker_repo variable is missing" $.Values.snmp_exporter.docker_repo}}:{{ required "snmp_exporter.image_version variable is missing" $.Values.snmp_exporter.image_version }}
           imagePullPolicy: IfNotPresent
           command:
             - /bin/snmp_exporter
