--- a/openstack/maia/values.yaml
+++ b/openstack/maia/values.yaml
@@ -2,7 +2,6 @@ global:
   # region: DEFINED-IN-REGION-SECRETS
   # domain: DEFINED-IN-REGION-SECRETS
   # imageRegistry: DEFINED-IN-REGION-SECRETS
-  # image_namespace: defined in secrets
 maia:
   # maia is on in all regions by default
   enabled: True
@@ -58,8 +57,8 @@ snmp_exporter:
 
 jumpserver:
    image:
-#      namespace: DEFINED-IN-REGION-SECRETS
+      namespace: monsoon
       name: jumphealth
-      tag: 1.1
+      tag: 1.3
 #   radius_secret: DEFINED-IN-REGION-SECRETS
    port_number: 9150
