add some memory limits

--- a/openstack/maia/templates/maia-deployment.yaml
+++ b/openstack/maia/templates/maia-deployment.yaml
@@ -42,6 +42,11 @@ spec:
           env:
             - name: MAIA_DEBUG
               value: {{ $.Values.maia.debug }}
+          resources:
+              requests:
+                  memory: "50Mi"
+              limits:
+                  memory: "100Mi"
           volumeMounts:
             - mountPath: /etc/maia
               name: maia-etc
