--- a/openstack/maia/templates/prometheus-deployment.yaml
+++ b/openstack/maia/templates/prometheus-deployment.yaml
@@ -37,6 +37,11 @@ spec:
             - --web.enable-admin-api
             - --web.enable-lifecycle
             - --log.level={{ default "info" .Values.prometheus.log_level }}
+          resources:
+              requests:
+                  memory: {{ .Values.prometheus.resources.memory.expected }}
+              limits:
+                  memory: {{ .Values.prometheus.resources.memory.tolerated }}
           ports:
             - name: http
               containerPort: {{ .Values.prometheus.listen_port }}
