--- a/openstack/maia/values.yaml
+++ b/openstack/maia/values.yaml
@@ -44,6 +44,11 @@ prometheus:
     # this should be ReadWriteOnce but change is not possible
     access_mode: ReadWriteMany
     size: 100Gi
+  resources:
+    # reasonable defaults, should be reduced for small regions
+    memory:
+      expected: 4Gi
+      tolerated: 8Gi
 
 snmp_exporter:
   listen_port: 9116
