[content-repo] add support for architectures if job.from.type is defined

--- a/openstack/content-repo/templates/configmap.yaml
+++ b/openstack/content-repo/templates/configmap.yaml
@@ -34,6 +34,9 @@ data:
           {{- if $job.from.url }}
           url:  {{$job.from.url}}
           type: {{ coalesce $job.from.type "''" }}
+          {{- if $job.from.type }}
+          arch: {{ coalesce $job.from.arch "[]" }}
+          {{- end }}
           cert: {{ coalesce $job.from.cert $config.cert "''" }}
           key:  {{ coalesce $job.from.key $config.key "''" }}
           ca:   {{ coalesce $job.from.ca $config.ca "''" }}
