--- a/system/infra-monitoring/requirements.yaml
+++ b/system/infra-monitoring/requirements.yaml
@@ -7,7 +7,7 @@ dependencies:
     repository: file://vendor/netapp-exporter
     version: 0.0.1
     condition: netapp-exporter.enabled
-  - name: apic-exporters
+  - name: apic_exporters
     repository: file://vendor/apic_exporters
     version: 1.0.0
     condition: apic_exporters.enabled
