[ironic] fixes conductor-kq when node name is "None"

--- a/openstack/ironic/templates/conductors-kq.yaml
+++ b/openstack/ironic/templates/conductors-kq.yaml
@@ -33,6 +33,9 @@ python: |
                     'storage_interface','boot_interface','vendor_interface',
                     'network_interface','power_interface','rescue_interface',
                     'bios_interface','deploy_interface','console_interface']):
+        if node.name is None:
+            continue
+
         block_name = node.name.split('-')[-1]
         if block_name in blocks:
             block = blocks[block_name]
