[ironic] fixes migrate node query when node name is None

--- a/openstack/ironic/templates/migrate-nodes-kq.yaml
+++ b/openstack/ironic/templates/migrate-nodes-kq.yaml
@@ -39,6 +39,10 @@ python: |
 
         prop = node['properties']
         name = node['name']
+
+        if name is None:
+            continue
+
         resources = (int(prop['cpus']),
                      int(prop['memory_mb']),
                      int(prop['local_gb']))
