--- a/global/iris/charts/api/templates/deployment.yaml
+++ b/global/iris/charts/api/templates/deployment.yaml
@@ -29,6 +29,8 @@ spec:
           env:
             - name: REGION
               value: {{ .Values.region }}
+            - name: IRIS_API_DB_PASSWORD
+              valueFrom: { secretKeyRef:    { name: {{ template "postgresql.fullname" . }}, key: postgres-password } }  
           livenessProbe:
             httpGet:
               path: /system/liveliness
