--- a/openstack/hermes/templates/elasticsearch-deployment.yaml
+++ b/openstack/hermes/templates/elasticsearch-deployment.yaml
@@ -30,13 +30,12 @@ spec:
           command:
             - /bin/sh
             - -c
-            - chown 1000:1000 /data/ &&
-              rm -rf /data/es-config &&
-              mkdir /data/es-config &&
-              chown 1000:1000 /data/es-config &&
+            - mkdir -p /data/es-config &&
+              chown -R 1000:1000 /data/es-config &&
               cp /hermes-etc/* /data/es-config &&
               mkdir /data/es-config/scripts &&
-              mkdir -p /data/snapshots
+              mkdir -p /data/snapshots &&
+              chown -R 1000:1000 /data/snapshots
           volumeMounts:
             - name: data
               mountPath: /data
@@ -53,17 +52,19 @@ spec:
             claimName: hermes-elasticsearch
       containers:
         - name: elasticsearch
-          image: docker.elastic.co/elasticsearch/elasticsearch:{{.Values.hermes_image_version_elasticsearch}}
+          image: docker.elastic.co/elasticsearch/elasticsearch-oss:{{.Values.hermes_image_version_elasticsearch}}
           imagePullPolicy: IfNotPresent
-          command:
-            - elasticsearch
-          args:
-            # read the config from the provided real config
-            - "-Epath.conf=/data/es-config/"
+          securityContext:
+            runAsUser: 1000
+          #command: ["/bin/bash", "-c", "while true; do sleep 1000; done"]
+          #command: [elasticsearch-plugin remove ingest-geoip --purge && elasticsearch]
+          command: [elasticsearch]
           env:
             # tell elasticsearch where to find jvm.options
             - name: ES_JVM_OPTIONS
               value: "/data/es-config/jvm.options"
+            - name: ES_PATH_CONF
+              value: "/data/es-config/"
           volumeMounts:
             - name: data
               mountPath: /data
