--- a/openstack/hermes/templates/elasticsearch-etc-configmap.yaml
+++ b/openstack/hermes/templates/elasticsearch-etc-configmap.yaml
@@ -9,8 +9,8 @@ metadata:
     component: configuration
 
 data:
-  elasticsearch.yaml: |
-{{ include "hermes/templates/etc/_elasticsearch.yaml.tpl" . | indent 4 }}
+  elasticsearch.yml: |
+{{ include "hermes/templates/etc/_elasticsearch.yml.tpl" . | indent 4 }}
   log4j2.properties: |
 {{ include "hermes/templates/etc/_log4j2.properties.tpl" . | indent 4 }}
   jvm.options: |
