dev-null gets all non-routed  alerts
sequence changes; custom channels first (continuous true), then duty channels (continuous false) - if something is not caught by duty routing it ends in def-null.

--- a/global/prometheus-alertmanager/templates/config.yaml
+++ b/global/prometheus-alertmanager/templates/config.yaml
@@ -521,7 +521,7 @@ data:
     # slack duty api
     - name: slack_api_info
       slack_configs:
-        - channel: '#alert-api-{{"{{ .CommonLabels.severity }}"}}'
+        - channel: '#alert-api-info'
           api_url: {{ required "slack.webhook_url undefined" .Values.slack.webhook_url | quote }}
           username: "Control Plane"
           title: {{"'{{template \"slack.sapcc.title\" . }}'"}}
@@ -535,7 +535,7 @@ data:
           
     - name: slack_api_warning
       slack_configs:
-        - channel: '#alert-api-{{"{{ .CommonLabels.severity }}"}}'
+        - channel: '#alert-api-warning'
           api_url: {{ required "slack.api_warning_webhook_url undefined" .Values.slack.api_warning_webhook_url | quote }}
           username: "Control Plane"
           title: {{"'{{template \"slack.sapcc.title\" . }}'"}}
@@ -566,7 +566,7 @@ data:
 
     - name: slack_api_critical
       slack_configs:
-        - channel: '#alert-api-{{"{{ .CommonLabels.severity }}"}}'
+        - channel: '#alert-api-critical'
           api_url: {{ required "slack.api_critical_webhook_url undefined" .Values.slack.api_critical_webhook_url | quote }}
           username: "Control Plane"
           title: {{"'{{template \"slack.sapcc.title\" . }}'"}}
@@ -667,7 +667,7 @@ data:
       
     - name: slack_kks_critical
       slack_configs:
-        - channel: '#cc-kks-{{"{{ .CommonLabels.severity }}"}}'
+        - channel: '#cc-kks-critical'
           api_url: {{ required "slack.kubernikus_critical_webhook_url undefined" .Values.slack.kubernikus_critical_webhook_url | quote }}
           username: "Control Plane"
           title: {{"'{{template \"slack.sapcc.title\" . }}'"}}
