dev-null gets all non-routed  alerts
sequence changes; custom channels first (continuous true), then duty channels (continuous false) - if something is not caught by duty routing it ends in def-null.

--- a/global/prometheus-alertmanager/templates/config.yaml
+++ b/global/prometheus-alertmanager/templates/config.yaml
@@ -50,7 +50,7 @@ data:
       # - 1. custom setup for alerts with duty receivers, always 'continue: true'
       # - 2. duty setup blocks must end with 'continue: false' - it shall grep all relevant alerts
       # - 3. qa/staging/labs (should be non congruent to duty channels), must end with 'continue: false'
-      # - 4. specific cutom setup for alerts NOT covered in Duty, must end with 'continue: false'
+      # - 4. specific custom setup for alerts NOT covered in Duty, must end with 'continue: false'
       # - all undefined routes should be routed to dev_null (if too many: fix alert focus or duty filter)
       routes:
 
