--- a/global/prometheus-alertmanager/templates/config.yaml
+++ b/global/prometheus-alertmanager/templates/config.yaml
@@ -45,14 +45,16 @@ data:
       repeat_interval: 12h
       receiver: dev-null
 
-      # Route Logic:
-      # - execution is top down
-      # - custom setup first and always continue: true
-      # - duty setup gets continue: false
-      # - all undefined should be routed to dev_null
+      # Route Hierarchie:
+      # - execution is top down (check here: https://prometheus.io/webtools/alerting/routing-tree-editor/)
+      # - 1. custom setup for alerts with duty receivers, always 'continue: true'
+      # - 2. duty setup blocks must end with 'continue: false' - it shall grep all relevant alerts
+      # - 3. qa/staging/labs (should be non congruent to duty channels), must end with 'continue: false'
+      # - 4. specific cutom setup for alerts NOT covered in Duty, must end with 'continue: false'
+      # - all undefined routes should be routed to dev_null (if too many: fix alert focus or duty filter)
       routes:
 
-      # ======= CUSTOM NOTIFICATION CHANNELS ======= 
+      # ======= CUSTOM ALERT NOTIFICATION ON DUTY RELEVANT ALERTS ======= 
 
       # owner: Thomas Grainchen
       - receiver: slack_nannies
@@ -244,8 +246,10 @@ data:
           severity: critical | warning | info
           region: staging | lab-1
 
+      # ======= SPECIFIC ALERT NOTIFICATION  ======= 
 
-      # all unrouted should end here
+
+      # ======= all unrouted should end here ======= 
       - receiver: dev-null
         continue: false
 
